manifests/external-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-backend
  template:
    metadata:
      labels:
        app: external-backend
    spec:
      containers:
        - name: external-backend
          image: 811288377093.dkr.ecr.us-west-2.amazonaws.com/external-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: HOST_NAME   # Setting Database host address from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom :
                configMapKeyRef :
                  name : db-config
                  key :  dbName
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom :
                secretKeyRef :
                  name : db-secrets
                  key :  username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom :
                secretKeyRef :
                  name : db-secrets
                  key :  password
            - name: TZ # TimeZone
              value: Asia/Seoul       
          volumeMounts:
            - name: tz-seoul
              mountPath: /etc/localtime
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
