manifests/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/payments"
spec:
  selector:
    app:  external-backend
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
